discussion/kv_engine/126024/126024_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Update get_scope_id and get_collection_id to check that the
current user has any access to the scope or collection.

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-27 19:54:10.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-27 21:11:02.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23785/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23785/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1952/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1952/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1952/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2452/ : FAILURE

Failure of a CTest test [2020-04-27T20:15:08.262Z] 232/400 Test #232: ep_testsuite.full_eviction.rocksdb ................................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2452/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27815/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3374/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3454/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3395/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11244/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-04-28 05:38:21.000000000
Message: 
Patch Set 10: Code-Review+1

(1 comment)
Line:4776, engines/ep/src/ep_engine.cc -> Nit: should be testPrivilege

----------------------------------------------------------------------------------------------------------------------
